<resources>
    <string name="app_name">Shamli\'s Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="cancel">Discard</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
</resources>
